# rusty-response

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docker-image.yml
doc/: API.md
rusty-response-api/: .dockerignore  Cargo.toml  Dockerfile
rusty-response-api/migrations/: 20250525142226_init.sql
rusty-response-api/src/: config.rs  lib.rs  main.rs
rusty-response-api/src/channel/: error.rs  mod.rs
rusty-response-api/src/channel/server/: handler.rs  mod.rs  runner.rs  types.rs  utils.rs
rusty-response-api/src/crypt/: error.rs  mod.rs  password.rs  token.rs
rusty-response-api/src/events/: dispatcher.rs  event.rs  mod.rs
rusty-response-api/src/model/: error.rs  mod.rs  notifier.rs  server.rs  server_log.rs  user.rs  user_action.rs  utils.rs
rusty-response-api/src/notify/: error.rs  formatter.rs  mod.rs  notifier.rs
rusty-response-api/src/notify/discord/: mod.rs  notifier.rs
rusty-response-api/src/notify/telegram/: mod.rs  notifier.rs
rusty-response-api/src/web/: error.rs  mod.rs  utils.rs
rusty-response-api/src/web/routes/: mod.rs  notifier.rs  server.rs  server_log.rs  user.rs
rusty-response-api/src/web/routes/middlewares/: mod.rs  user.rs
rusty-response-web/: README.md
