[package]
name = "rusty-response-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Serialization/Deserialization support
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"

# Error Handling
eyre = { version = "0.6", features = ["track-caller"] }
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-log = "0.2"
tracing-error = "0.2"
tracing-futures = "0.2"

# Async
tokio = { version = "1.45", features = ["full"] }

# HTTP
reqwest = "0.12"

# Database
sqlx = { version = "0.8", features = [
    "derive",
    "sqlite",
    "runtime-tokio",
    "time",
] }
time = { version = "0.3", features = ["serde"] }

# Crypt
bcrypt = "0.17"

# Web
axum = "0.8"
jsonwebtoken = "9.3"
tower-cookies = "0.11"
tokio-util = "0.7"
async-trait = "0.1.88"

# Notify

# telegram
frankenstein = { version = "0.41", features = ["client-reqwest"] }

# discord
discord-webhook2 = "0.4.3"

# Formatting
handlebars = "6.3"

[features]
default = []
events = []
